@@ -29,7 +29,8 @@ extern "C" {
 enum avro_codec_type_t {
 	AVRO_CODEC_NULL,
 	AVRO_CODEC_DEFLATE,
-	AVRO_CODEC_LZMA
+	AVRO_CODEC_LZMA,
+	AVRO_CODEC_SNAPPY
 };
 typedef enum avro_codec_type_t avro_codec_type_t;
 
