@@ -14,6 +14,8 @@ Trunk (not yet released)
 
     AVRO-823: C#: Add data file support. (David McIntosh via cutting)
 
+    AVRO-896. C: Snappy compression codec. (Grisha Trubetskoy via dcreager)
+
   IMPROVEMENTS
 
     AVRO-1260. Ruby: Improve read performance. (Martin Kleppmann via cutting)
